Fixed potential overflow on nav mobile

--- a/main.css
+++ b/main.css
@@ -243,16 +243,6 @@ Fade in classes .fadein {
           transform: translateY(5px);
 }
 
-.link-list {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  list-style: none;
-}
-
 .text-name {
   -ms-grid-column-align: start;
       justify-self: start;
@@ -284,10 +274,14 @@ Fade in classes .fadein {
 }
 
 .line.one {
+  -ms-grid-column: 2;
+  grid-column: 2;
   margin-top: 15vh;
 }
 
 .line.two {
+  -ms-grid-column: 3;
+  grid-column: 3;
   margin-top: 35vh;
 }
 
@@ -379,8 +373,10 @@ nav {
 }
 
 #nav-mobile {
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: auto (1fr)[3] auto;
+      grid-template-columns: auto repeat(3, 1fr) auto;
+  -webkit-column-gap: 8px;
+          column-gap: 8px;
   position: fixed;
   top: 0;
   right: -100%;
@@ -397,12 +393,19 @@ nav {
 }
 
 #nav-mobile ul {
-  margin: 0 1rem 15vh 0;
+  -ms-grid-column: 4;
+  grid-column: 4;
   -ms-flex-item-align: end;
       -ms-grid-row-align: end;
       align-self: end;
-  -ms-grid-column: 3;
-  grid-column: 3;
+  margin: 0 0 15vh 0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  list-style: none;
 }
 
 #nav-mobile li {
